# shared-encoder

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: code_checks.yml
src/shared_encoder/: __init__.py  encoders.py  tasks.py
src/shared_encoder/configs/: __init__.py
src/shared_encoder/configs/experiment/: PMC-OA-SHARE-MT-20.yaml  PMC-OA-SHARE-MV-1.yaml  PMC-OA.yaml
src/shared_encoder/datasets/: __init__.py  deepeyenet.py  mimiciv_cxr.py  pmcoa.py  quilt.py
